; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_transaction.c_wait_current_trans_commit_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_transaction.c_wait_current_trans_commit_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_root = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.btrfs_transaction = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btrfs_root*, %struct.btrfs_transaction*)* @wait_current_trans_commit_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wait_current_trans_commit_start(%struct.btrfs_root* %0, %struct.btrfs_transaction* %1) #0 {
  %3 = alloca %struct.btrfs_root*, align 8
  %4 = alloca %struct.btrfs_transaction*, align 8
  store %struct.btrfs_root* %0, %struct.btrfs_root** %3, align 8
  store %struct.btrfs_transaction* %1, %struct.btrfs_transaction** %4, align 8
  %5 = load %struct.btrfs_root*, %struct.btrfs_root** %3, align 8
  %6 = getelementptr inbounds %struct.btrfs_root, %struct.btrfs_root* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.btrfs_transaction*, %struct.btrfs_transaction** %4, align 8
  %11 = getelementptr inbounds %struct.btrfs_transaction, %struct.btrfs_transaction* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @wait_event(i32 %9, i32 %12)
  ret void
}

declare dso_local i32 @wait_event(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
